@@ -139,12 +139,30 @@ Pre-Depends: ${misc:Pre-Depends}
 Description: TeX Live: Lua 5.2, modified for use with LuaTeX
  The Lua 5.2 library as used within LuaTeX.
 
+Package: libtexlua53
+Section: libs
+Architecture: any
+Multi-Arch: same
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Pre-Depends: ${misc:Pre-Depends}
+Description: TeX Live: Lua 5.3, modified for use with LuaTeX
+ The Lua 5.3 library as used within LuaTeX.
+
 Package: libtexlua52-dev
 Section: libdevel
 Architecture: any
 Multi-Arch: same
 Depends: ${misc:Depends}, libtexlua52 (= ${binary:Version})
 Description: Tex Live: Lua 5.2, modified for use with LuaTeX (development part)
+ This package contains the static library and header files for the texlua
+ library.
+
+Package: libtexlua53-dev
+Section: libdevel
+Architecture: any
+Multi-Arch: same
+Depends: ${misc:Depends}, libtexlua53 (= ${binary:Version})
+Description: Tex Live: Lua 5.3, modified for use with LuaTeX (development part)
  This package contains the static library and header files for the texlua
  library.
 
