@@ -1,0 +1,2 @@
+usr/lib/*/libtexlua53.so.5.*.*
+usr/lib/*/libtexlua53.so.5
