@@ -201,7 +201,7 @@ override_dh_installdocs:
 	dh_installdocs -plibsynctex1 -plibsynctex-dev \
 		texk/web2c/synctexdir/README.txt	\
 		texk/web2c/synctexdir/synctex_parser_readme.txt
-	#dh_installdocs -plibtexlua52 -plibtexlua52-dev \
+	#dh_installdocs -plibtexlua53 -plibtexlua53-dev \
 	#	NOTHING TO INSTALL
 ifeq ($(WITHLUAJIT), yes)
 	dh_installdocs -plibtexluajit2 -plibtexluajit-dev
@@ -217,6 +217,8 @@ override_dh_installchangelogs:
 		texk/web2c/synctexdir/ChangeLog
 	dh_installchangelogs -plibtexlua52 -plibtexlua52-dev \
 		libs/lua52/TLpatches/ChangeLog
+	dh_installchangelogs -plibtexlua53 -plibtexlua53-dev \
+		libs/lua53/TLpatches/ChangeLog
 ifeq ($(WITHLUAJIT), yes)
 	dh_installchangelogs -plibtexluajit2 -plibtexluajit-dev \
 		libs/luajit/TLpatches/ChangeLog
@@ -230,6 +232,7 @@ override_dh_makeshlibs:
 	dh_makeshlibs -plibptexenc1
 	dh_makeshlibs -plibsynctex1
 	dh_makeshlibs -plibtexlua52
+	dh_makeshlibs -plibtexlua53
 ifeq ($(WITHLUAJIT), yes)
 	dh_makeshlibs -plibtexluajit2
 endif
@@ -237,7 +240,8 @@ endif
 SHLIBDEPS = -l debian/libkpathsea6/usr/lib/* \
 		-l debian/libptexenc1/usr/lib/* \
 		-l debian/libsynctex1/usr/lib/* \
-		-l debian/libtexlua52/usr/lib/*
+		-l debian/libtexlua52/usr/lib/* \
+		-l debian/libtexlua53/usr/lib/*
 
 ifeq ($(WITHLUAJIT), yes)
 	SHLIBDEPS += -l debian/libtexluajit2/usr/lib/*
